Support LCD display on picocoremx7ulp
Add the possibility to setup a LCD display via tc358762 MIPI-DSI->LCD
converter.

--- a/arch/arm/boot/dts/picocoremx7ulp.dts
+++ b/arch/arm/boot/dts/picocoremx7ulp.dts
@@ -23,16 +23,18 @@
  */
 
 #define DISPLAY_NONE		0	/* No display on this port */
-#define DISPLAY_MIPI_DSI	1	/* MIPI_DSI via RGB adapter */
+#define DISPLAY_LCD		1	/* Via MIPI_DSI 2 RGB converter */
+//### TODO: not tested yet
+//#define DISPLAY_MIPI_DSI	2	/* MIPI_DSI display */
 
 /*
  * Set the display configuration:
  *
  * - If you have no display, set LCDIF to DISPLAY_NONE.
- * - If you have a display, set LCDIF to DISPLAY_MIPI_DSI.
+ * - If you have a RGB display, set LCDIF to DISPLAY_LCD.
+ * - If you have a MIPI DSI display, set LCDIF to DISPLAY_MIPI_DSI.
  */
-//### TODO check if how its working
-//#define CONFIG_PICOCOREMX7ULP_LCDIF	DISPLAY_MIPI_DSI
+#define CONFIG_PICOCOREMX7ULP_LCDIF	DISPLAY_LCD
 
 /*
  * Configure touch screen:
@@ -107,15 +109,17 @@
 	backlight {
 		compatible = "pwm-backlight";
 		pwms = <&pwm0 1 5000000>;
-		brightness-levels = <0 4 8 16 32 64 128 255>;
-		default-brightness-level = <6>;
+		brightness-levels = <0 1 5 10 18 28 41 56
+				     73 92 113 137 163 192 222 255>;
+		default-brightness-level = <14>;
 		status = "okay";
 	};
 
 #if (CONFIG_PICOCOREMX7ULP_LCDIF == DISPLAY_MIPI_DSI)
 	mipi_dsi_reset: mipi-dsi-reset {
 		compatible = "gpio-reset";
-		reset-gpios = <&gpio_ptc 19 GPIO_ACTIVE_LOW>;
+		/* ### TODO: no reset pin defined */
+		//reset-gpios = <&gpio_ptc 19 GPIO_ACTIVE_LOW>;
 		reset-delay-us = <1000>;
 		#reset-cells = <0>;
 	};
@@ -275,7 +279,7 @@
 	status = "disabled";
 };
 
-#if (CONFIG_PICOCOREMX7ULP_LCDIF == DISPLAY_MIPI_DSI)
+#if (CONFIG_PICOCOREMX7ULP_LCDIF != DISPLAY_NONE)
 &lcdif {
 	disp-dev = "mipi_dsi_northwest";
 	display = <&display0>;
@@ -283,12 +287,12 @@
 	status = "okay";
 
 	display0: display@0 {
-		bits-per-pixel = <24>; 
+		bits-per-pixel = <32>;
 		bus-width = <24>;
 		display-timings {
 			native-mode = <&timing0>;
 			timing0: timing0 {
-			 clock-frequency = <33500000>;
+			 clock-frequency = <29400000>;
 			 hactive = <800>;
 			 vactive = <480>;
 			 hfront-porch = <210>;
@@ -320,17 +324,6 @@
 		reg = <0>;
 		spi-max-frequency = <20000000>;
 	};
-};
-#endif
-
-#if (CONFIG_PICOCOREMX7ULP_LCDIF == DISPLAY_MIPI_DSI)
-&mipi_dsi {
-	pinctrl-names = "default", "sleep";
-	pinctrl-0 = <&pinctrl_mipi_dsi_reset>;
-	pinctrl-1 = <&pinctrl_mipi_dsi_reset>;
-	lcd_panel = "TRULY-WVGA-TFT3P5581E"; 
-	resets = <&mipi_dsi_reset>;
-	status = "okay";
 };
 #endif
 
@@ -456,16 +449,20 @@
 	pinctrl-0 = <&pinctrl_lpi2c5>;
 	pinctrl-1 = <&pinctrl_lpi2c5>;
 	status = "okay";
-#if 0
-#if (CONFIG_PICOCOREMX7ULP_LCDIF == DISPLAY_MIPI_DSI)
+
+#if (CONFIG_PICOCOREMX7ULP_LCDIF == DISPLAY_LCD)
 	/* TC358752 DSI --> RGB de-serializer on i2c5 */
-	pitouchscreen: panel@0b {
-		compatible = "tc358762";
+	tc358762: tc358762@0b {
+		compatible = "toshiba,tc358762";
 		reg = <0x0b>;
-		clocks = <&clks IMX7ULP_CLK_DSI>;
-		clock-names = "mipi_dsi_clk";
+		ref-clk = <24000>;
+		dsi-traffic-mode = <0>;
+		bpp = <24>;
+		tlpx = <50>;
+		ths-prepare = <75>;
+		ths-zero = <124>;
+		reset-gpio = <&gpio_ptc 19 GPIO_ACTIVE_LOW>;
 	};
-#endif
 #endif
 };
 #endif
@@ -557,6 +554,38 @@
 		compatible = "linux,spidev";
 		spi-max-frequency = <20000000>;
 	};
+};
+#endif
+
+#if (CONFIG_PICOCOREMX7ULP_LCDIF == DISPLAY_LCD)
+&tc358762 {
+	display = <&display0>;
+	status = "okay";
+
+	port {
+		dsi_to_rgb: endpoint {
+			remote-endpoint = <&mipi_dsi_ep>;
+		};
+	};
+};
+#endif
+
+#if (CONFIG_PICOCOREMX7ULP_LCDIF != DISPLAY_NONE)
+&mipi_dsi {
+	status = "okay";
+#if (CONFIG_PICOCOREMX7ULP_LCDIF == DISPLAY_LCD)
+	port {
+		mipi_dsi_ep: endpoint {
+			remote-endpoint = <&dsi_to_rgb>;
+		};
+	};
+#elif(CONFIG_PICOCOREMX7ULP_LCDIF == DISPLAY_MIPI_DSI)
+	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&pinctrl_mipi_dsi_reset>;
+	pinctrl-1 = <&pinctrl_mipi_dsi_reset>;
+	lcd_panel = "TRULY-WVGA-TFT3P5581E";
+	resets = <&mipi_dsi_reset>;
+#endif
 };
 #endif
 
@@ -703,6 +732,9 @@
 				/* I2C7n RST */
 				IMX7ULP_PAD_PTF1__PTF1		0x20003
 
+				/* TC358762 RST */
+				IMX7ULP_PAD_PTC19__PTC19	0x20002
+
 				/* USHC1_VSEL */
 			//	IMX7ULP_PAD_PTE14__SDHC1_VS	0x43
 			>;
@@ -755,8 +787,8 @@
 #if (CONFIG_PICOCOREMX7ULP_LCDIF == DISPLAY_MIPI_DSI)
 		pinctrl_mipi_dsi_reset: mipi_dsi_reset_grp {
 			fsl,pins = <
+				/* ### TODO: no reset pin defined */
 				//IMX7ULP_PAD_PTC19__PTC19	0x20003
-				IMX7ULP_PAD_PTC19__PTC19	0x00003
 			>;
 		};
 #endif
