Add Power_Reset to fsimx7ulp_defconfig
Neccessary drivers

- CONFIG_POWER_RESET
- CONFIG_POWER_RESET_SYSCON_POWEROFF

must be enabled. If not the mipi_dsi_northwest driver exit with error:
failed to get parent regmap. This is caused by

mipi_dsi->regmap = syscon_regmap_lookup_by_phandle(np, "sim");

--- a/arch/arm/configs/fsimx7ulp_defconfig
+++ b/arch/arm/configs/fsimx7ulp_defconfig
@@ -314,6 +314,8 @@ CONFIG_SPI_FSL_LPSPI=y
 CONFIG_SPI_SPIDEV=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_PCA953X=y
+CONFIG_POWER_RESET=y
+CONFIG_POWER_RESET_SYSCON_POWEROFF=y
 CONFIG_POWER_SUPPLY=y
 # CONFIG_MXC_MMA8451 is not set
 CONFIG_THERMAL=y
