--- a/arch/arm/boot/dts/picocoremx7ulp.dts
+++ b/arch/arm/boot/dts/picocoremx7ulp.dts
@@ -9,8 +9,8 @@
 
 /dts-v1/;
 
-#include "imx7ulp.dtsi"
-#include <dt-bindings/input/input.h>
+/* Set board revision as 3-digit number, e.g. 110 for board rev. 1.10 */
+#define CONFIG_PICOCOREMX7ULP_BOARD_REVISION	110
 
 /* GPIO numbers
  *
@@ -94,9 +94,12 @@
 #undef CONFIG_PICOCOREMX7ULP_SD_WP
 #endif
 
+#include "imx7ulp.dtsi"
+#include <dt-bindings/input/input.h>
+
 / {
 	model = "F&S PicoCoreMX7ULP";
-	compatible = "fsl,imx7ulp-evk", "fsl,imx7ulp";
+	compatible = "fsl,imx7ulp-picocoremx7ulp", "fsl,imx7ulp";
 
 	chosen {
 		bootargs = "console=ttyLP0,115200 earlycon=lpuart32,0x402D0000,115200";
@@ -191,10 +194,12 @@
 #endif
 	};
 
+#if (CONFIG_PICOCOREMX7ULP_BOARD_REVISION < 110)
 	extcon_usb1: extcon_usb1 {
 		compatible = "linux,extcon-usb-gpio";
 		id-gpio = <&gpio_ptc 8 GPIO_ACTIVE_HIGH>;
 	};
+#endif
 
 	/* TODO check node */
 	pf1550-rpmsg {
@@ -251,36 +256,8 @@
 				regulator-max-microvolt = <3300000>;
 				regulator-always-on;
 		};
-#ifdef CONFIG_PICOCOREMX7ULP_AUDIO
-		/* SGTL5000 analog voltage */
-		reg_sgtl5000_vdda: sgtl5000_vdda {
-			compatible = "regulator-fixed";
-			regulator-name = "VDDA-supply";
-			regulator-min-microvolt = <3000000>;
-			regulator-max-microvolt = <3000000>;
-			regulator-always-on;
-		};
-
-		/* SGTL5000 I/O voltage */
-		reg_sgtl5000_vddio: sgtl5000_vddio {
-			compatible = "regulator-fixed";
-			regulator-name = "VDDIO-supply";
-			regulator-min-microvolt = <3300000>;
-			regulator-max-microvolt = <3300000>;
-			regulator-always-on;
-		};
-
-		/* SGTL5000 internal digital voltage */
-		reg_sgtl5000_vddd: sgtl5000_vddd {
-			compatible = "regulator-fixed";
-			regulator-name = "VDDD-supply";
-			regulator-min-microvolt = <1350000>;
-			regulator-max-microvolt = <1350000>;
-			regulator-always-on;
-		};
-#endif
 	};
-// sgtl5000
+
 #ifdef CONFIG_PICOCOREMX7ULP_AUDIO
 	sound-sgtl5000 {
 		compatible = "fsl,imx-audio-sgtl5000";
@@ -300,8 +277,6 @@
 	bdinfo {
 		compatible = "bdinfo";
 		board_name = "PicoCoreMX7ULP";
-		login_tty = "ttyLP0";
-		login_speed = "115200";
 	};
 };
 
@@ -309,10 +284,12 @@
 	arm-supply= <&sw1_reg>;
 };
 
-// kernel panic if its enabled. Maybe caused by old CPU revision
+// kernel panic if its enabled - Job Ring error
+#if (CONFIG_PICOCOREMX7ULP_BOARD_REVISION <= 110)
 &crypto {
 	status = "disabled";
 };
+#endif
 
 #if (CONFIG_PICOCOREMX7ULP_LCDIF != DISPLAY_NONE)
 &lcdif {
@@ -405,6 +382,17 @@
 	status = "okay";
 };
 
+&rpmsg{
+	/*
+	 * 64K for one rpmsg instance, default using 2 rpmsg instances:
+	 * --0x9FF00000~0x9FF0FFFF: pmic,pm,audio,keys,gpio,sensor
+	 * --0x9FF10000~0x9FF1FFFF: pingpong,virtual tty
+	 */
+	vdev-nums = <2>;
+	reg = <0x9FF00000 0x20000>;
+	status = "okay";
+};
+
 #ifdef CONFIG_PICOCOREMX7ULP_EMMC
 &usdhc0 { /* emmc */
 	pinctrl-names = "default", "sleep";
@@ -445,7 +433,9 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usbotg1>;
 	vbus-supply = <&reg_usb_otg1_vbus>;
+#if (CONFIG_PICOCOREMX7ULP_BOARD_REVISION < 110)
 	extcon = <0>, <&extcon_usb1>;
+#endif
 	srp-disable;
 	hnp-disable;
 	adp-disable;
@@ -740,7 +730,11 @@
 				IMX7ULP_PAD_PTC9__PTC9		0x00002
 				IMX7ULP_PAD_PTC11__PTC11	0x00002
 				IMX7ULP_PAD_PTC12__PTC12	0x00002
+#if (CONFIG_PICOCOREMX7ULP_BOARD_REVISION < 110)
 				IMX7ULP_PAD_PTC13__PTC13	0x00002
+#else
+				IMX7ULP_PAD_PTC8__PTC8		0x00002
+#endif
 				IMX7ULP_PAD_PTC14__PTC14	0x00002
 				IMX7ULP_PAD_PTC15__PTC15	0x00002
 				IMX7ULP_PAD_PTC16__PTC16	0x00002
@@ -914,7 +908,11 @@
 				/* USB otg Power enable */
 				IMX7ULP_PAD_PTC0__PTC0		0x20003
 				/* USB_OTG1_ID: low: host, open: device */
+#if (CONFIG_PICOCOREMX7ULP_BOARD_REVISION < 110)
 				IMX7ULP_PAD_PTC8__PTC8		0x10003
+#else
+				IMX7ULP_PAD_PTC13__USB0_ID	0x10003
+#endif
 			>;
 		};
 	};
