Improve PicoCoreMX7ULP device tree
UART_C is not available if WLAN is equipped. Normally WLAN is equipped
so undef UART_C.

--- a/arch/arm/boot/dts/picocoremx7ulp.dts
+++ b/arch/arm/boot/dts/picocoremx7ulp.dts
@@ -92,6 +92,7 @@
 #undef CONFIG_PICOCOREMX7ULP_SD
 #undef CONFIG_PICOCOREMX7ULP_SD_CD
 #undef CONFIG_PICOCOREMX7ULP_SD_WP
+#undef CONFIG_PICOCOREMX7ULP_UART_C
 #endif
 
 #include "imx7ulp.dtsi"
