--- a/arch/arm/boot/dts/picocoremx7ulp.dts
+++ b/arch/arm/boot/dts/picocoremx7ulp.dts
@@ -24,7 +24,8 @@
 
 #define DISPLAY_NONE		0	/* No display on this port */
 #define DISPLAY_LCD		1	/* Via MIPI_DSI 2 RGB converter */
-//### TODO: not tested yet
+//### TODO: tested with NXP MIPI-DSI display but no reset pin defined for
+//### TODO: mipi-dsi waiting for HW redesign
 //#define DISPLAY_MIPI_DSI	2	/* MIPI_DSI display */
 
 /*
@@ -126,7 +127,7 @@
 	mipi_dsi_reset: mipi-dsi-reset {
 		compatible = "gpio-reset";
 		/* ### TODO: no reset pin defined */
-		//reset-gpios = <&gpio_ptc 19 GPIO_ACTIVE_LOW>;
+		reset-gpios = <&gpio_ptc 19 GPIO_ACTIVE_LOW>;
 		reset-delay-us = <1000>;
 		#reset-cells = <0>;
 	};
@@ -303,24 +304,45 @@
 	display0: display@0 {
 		bits-per-pixel = <32>;
 		bus-width = <24>;
+#if (CONFIG_PICOCOREMX7ULP_LCDIF == DISPLAY_LCD)
 		display-timings {
 			native-mode = <&timing0>;
 			timing0: timing0 {
-			 clock-frequency = <29400000>;
-			 hactive = <800>;
-			 vactive = <480>;
-			 hfront-porch = <210>;
-			 hback-porch = <26>;
-			 hsync-len = <20>;
-			 vback-porch = <21>;
-			 vfront-porch = <22>;
-			 vsync-len = <2>;
-			 hsync-active = <0>;
-			 vsync-active = <0>;
-			 de-active = <1>;
-			 pixelclk-active = <0>;
+			clock-frequency = <29400000>;
+			hactive = <800>;
+			vactive = <480>;
+			hfront-porch = <210>;
+			hback-porch = <26>;
+			hsync-len = <20>;
+			vback-porch = <21>;
+			vfront-porch = <22>;
+			vsync-len = <2>;
+			hsync-active = <0>;
+			vsync-active = <0>;
+			de-active = <1>;
+			pixelclk-active = <0>;
 			};
 		};
+#elif(CONFIG_PICOCOREMX7ULP_LCDIF == DISPLAY_MIPI_DSI)
+		display-timings {
+			native-mode = <&timing0>;
+			timing0: timing0 {
+			clock-frequency = <9200000>;
+			hactive = <480>;
+			vactive = <272>;
+			hfront-porch = <8>;
+			hback-porch = <4>;
+			hsync-len = <41>;
+			vback-porch = <2>;
+			vfront-porch = <4>;
+			vsync-len = <10>;
+			hsync-active = <0>;
+			vsync-active = <0>;
+			de-active = <1>;
+			pixelclk-active = <0>;
+			};
+		};
+#endif
 	};
 };
 #endif
@@ -606,6 +628,7 @@
 	pinctrl-0 = <&pinctrl_mipi_dsi_reset>;
 	pinctrl-1 = <&pinctrl_mipi_dsi_reset>;
 	lcd_panel = "TRULY-WVGA-TFT3P5581E";
+	/* ### TODO: no reset pin defined */
 	resets = <&mipi_dsi_reset>;
 #endif
 };
@@ -760,8 +783,10 @@
 				/* I2C7n RST */
 				IMX7ULP_PAD_PTF1__PTF1		0x20003
 
+#if (CONFIG_PICOCOREMX7ULP_LCDIF == DISPLAY_LCD)
 				/* TC358762 RST */
 				IMX7ULP_PAD_PTC19__PTC19	0x20002
+#endif
 
 				/* USHC1_VSEL */
 			//	IMX7ULP_PAD_PTE14__SDHC1_VS	0x43
@@ -816,7 +841,7 @@
 		pinctrl_mipi_dsi_reset: mipi_dsi_reset_grp {
 			fsl,pins = <
 				/* ### TODO: no reset pin defined */
-				//IMX7ULP_PAD_PTC19__PTC19	0x20003
+				IMX7ULP_PAD_PTC19__PTC19	0x20003
 			>;
 		};
 #endif
