--- a/arch/arm/configs/fsimx6_defconfig
+++ b/arch/arm/configs/fsimx6_defconfig
@@ -25,6 +25,9 @@ CONFIG_SOC_IMX6UL=y
 CONFIG_SOC_IMX6ULL=y
 CONFIG_SOC_IMX7D=y
 # CONFIG_SWP_EMULATE is not set
+CONFIG_PCI=y
+CONFIG_PCI_MSI=y
+CONFIG_PCI_IMX6=y
 CONFIG_SMP=y
 CONFIG_ARM_PSCI=y
 CONFIG_VMSPLIT_2G=y
