Add PCIe support for all F&S i.MX6 boards
Add support for PCIe for all F&S boards with CPU i.MX6 S/DL/D/Q. By
default PCIe is disabled in device-tree, but it can be enabled by define

--- a/arch/arm/boot/dts/armstonea9dl.dts
+++ b/arch/arm/boot/dts/armstonea9dl.dts
@@ -162,6 +162,9 @@ wvga {					\
 /* SD-CARD - SD_A is micro SD */
 #define CONFIG_ARMSTONEA9_SD_A
 
+/* PCIe */
+//#define CONFIG_ARMSTONEA9_PCIE
+
 /* I2C (I2C_C breaks armStone standard and is disabled by default) */
 #define CONFIG_ARMSTONEA9_I2C_A
 #define CONFIG_ARMSTONEA9_I2C_B
