--- a/arch/arm/boot/dts/armstonea9r2qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9r2qdl.dtsi
@@ -1024,7 +1024,7 @@
 };
 #endif /* CONFIG_ARMSTONEA9R2_LVDS0 || CONFIG_ARMSTONEA9R2_LVDS1 */
 
-#if 0 // not tested
+#ifdef CONFIG_ARMSTONEA9R2_PCIE
 &pcie {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pcie>;
@@ -1433,6 +1433,7 @@
 		};
 #endif /* CONFIG_ARMSTONEA9R2_EMMC */
 
+#ifdef CONFIG_ARMSTONEA9R2_PCIE
 		pinctrl_pcie: pciegrp {
 			fsl,pins = <
 				/* PCIe-DIS */
@@ -1443,6 +1444,7 @@
 				MX6QDL_PAD_NANDF_CS3__GPIO6_IO16	0x1b0b0
 			>;
 		};
+#endif /* CONFIG_ARMSTONEA9R2_PCIE */
 
 		pinctrl_status_leds: ledgrp {
 			fsl,pins = <
