--- a/arch/arm/boot/dts/efusa9q.dts
+++ b/arch/arm/boot/dts/efusa9q.dts
@@ -223,6 +223,9 @@ wvga {					\
 /* EMMC */
 #define CONFIG_EFUSA9_EMMC
 
+/* PCIe */
+//#define CONFIG_EFUSA9_PCIE
+
 /* I2C */
 #define CONFIG_EFUSA9_I2C_A
 #define CONFIG_EFUSA9_I2C_B
