--- a/arch/arm/boot/dts/armstonea9r2q.dts
+++ b/arch/arm/boot/dts/armstonea9r2q.dts
@@ -167,6 +167,9 @@ wvga {					\
 /* SD-CARD - SD_C is eMMC */
 #define CONFIG_ARMSTONEA9R2_EMMC
 
+/* PCIe */
+//#define CONFIG_ARMSTONEA9R2_PCIE
+
 /* I2C */
 #define CONFIG_ARMSTONEA9R2_I2C_A
 #define CONFIG_ARMSTONEA9R2_I2C_B
