Add Marvell WIFI PCIe driver to fsimx6_defconfig
Support for our new adapter ADP-mPCIe-WLAN. This adapter needs the
marvell PCIe driver. Add it to fsimx6_defconfig by default.

--- a/arch/arm/configs/fsimx6_defconfig
+++ b/arch/arm/configs/fsimx6_defconfig
@@ -301,6 +301,7 @@ CONFIG_USB_USBNET=m
 CONFIG_USB_NET_CDC_EEM=m
 # CONFIG_RTL_CARDS is not set
 CONFIG_MWIFIEX=m
+CONFIG_MWIFIEX_PCIE=m
 CONFIG_MWIFIEX_SDIO=m
 CONFIG_INPUT_POLLDEV=y
 CONFIG_INPUT_MATRIXKMAP=y
