Improve PCI_IMX6 driver activation for fsimx6sx_defconfig
The fsimx6sx_defconfig try to enable PCIe driver for i.MX6 CPUs but it
needs another driver CONFIG_PCI_MSI to activate CONFIG_PCI_IMX6. Add
this to fsimx6sx_defconfig.

--- a/arch/arm/configs/fsimx6sx_defconfig
+++ b/arch/arm/configs/fsimx6sx_defconfig
@@ -18,6 +18,7 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_ARCH_MXC=y
 CONFIG_SOC_IMX6SX=y
 CONFIG_PCI=y
+CONFIG_PCI_MSI=y
 CONFIG_PCI_IMX6=y
 CONFIG_ARM_PSCI=y
 CONFIG_VMSPLIT_2G=y
